chore: reduce Java warnings and improve code readability
- Replaced deprecated `Collectors.toList()` with `Stream.toList()`
- Removed unnecessary imports and unused fields
- Converted redundant explicit types to inferred types (e.g., `var`, pattern matching)
- Simplified boolean parsing and redundant assignments
- Extracted helper methods to improve maintainability
- Adjusted annotations (`@Test`, `@Bean`) for better consistency
- Ensured mutable lists where necessary (`new ArrayList<>()`)
- Refactored controllers into dedicated classes (`LoginLogoutController`, `WhoamiController`, `StyleConfigController`)

These changes collectively reduce compilation warnings and enhance overall code clarity in the `georchestra-gateway` project.